# DIY_ESP32_DesktopScreen

./: readme.md
01_三维模型/: 前壳.SLDPRT  前壳.STL  压板.SLDPRT  压板.STL  后壳.SLDPRT  后壳.STL  后壳支撑.SLDPRT  后壳支撑.STL  屏幕示意.SLDPRT  桌面屏幕3D打印文件.3mf  电池示意.SLDPRT
02_firmware/: readme.md
02_firmware/ESP32_Desk/: platformio.ini
02_firmware/ESP32_Desk/include/: FT6336U.h  aht20.h  display.h  network.h  touch.h
02_firmware/ESP32_Desk/include/Application/: System_Config.h  System_Device.h  System_Interaction.h
02_firmware/ESP32_Desk/src/: FT6336U.cpp  aht20.cpp  display.cpp  main.cpp  network.cpp  touch.cpp
02_firmware/ESP32_Desk/src/Application/: System_Config.cpp  System_Device.cpp  System_Interaction.cpp
02_firmware/ESP32_Desk/src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
02_firmware/ESP32_Desk/src/ui/components/: ui_comp_hook.c
02_firmware/ESP32_Desk/src/ui/fonts/: ui_font_BG20s4bpp.c  ui_font_BG24s4bpp.c  ui_font_BG30s4bpp.c  ui_font_BG40s4bpp.c
02_firmware/ESP32_Desk/src/ui/images/: ui_img_back_png.c  ui_img_click_png.c  ui_img_cloud_png.c  ui_img_cloudy_png.c  ui_img_home_png.c  ui_img_love_png.c  ui_img_music_back_png.c  ui_img_musicfill_png.c  ui_img_myqr_png.c  ui_img_qr_png.c  ui_img_rain_png.c  ui_img_snowy_png.c  ui_img_sunny_png.c  ui_img_time_png.c  ui_img_tutu_png.c  ui_img_weather_png.c  ui_img_zhang_png.c
02_firmware/ESP32_Desk/src/ui/screens/: ui_HomePage.c  ui_LovePage.c  ui_MenuPage.c  ui_TimePage.c  ui_WeatherPage.c
02_firmware/ui/SquareLine_Project/: Desk_Screen.sll  Desk_Screen.spj
(+7 files in other folders)
